src/assets/grayscale.css
#mainNav {
    min-height: 56px;
    background-color: #fff;
    box-shadow: 0px 0px 4px gray;
}

#mainNav .navbar-brand {
    color: #161616;
    font-weight: 700;
    padding: 0.9rem 0;
}

@media (min-width: 992px) {
    #mainNav {
        padding-top: 0;
        padding-bottom: 0;
        border-bottom: none;
        background-color: transparent;
        transition: background-color 0.3s ease-in-out;
    }
    #mainNav .navbar-brand {
        padding: 0.5rem 0;
        color: rgba(255, 255, 255, 0.5);
    }
    #mainNav .nav-link {
        transition: none;
        padding: 2rem 1.5rem;
        color: rgba(255, 255, 255, 0.5);
    }
    #mainNav .nav-link:hover {
        color: rgba(255, 255, 255, 0.75);
    }
    #mainNav .nav-link:active {
        color: white;
    }
    #mainNav.navbar-shrink {
        background-color: #fff;
    }
    #mainNav.navbar-shrink .navbar-brand {
        color: #161616;
    }
    #mainNav.navbar-shrink .navbar-brand:hover {
        color: darkseagreen;
    }
    #mainNav.navbar-shrink .nav-link {
        color: #161616;
        padding: 1.5rem 1.5rem 1.25rem;
        border-bottom: 0.25rem solid transparent;
    }
    #mainNav.navbar-shrink .nav-link:hover {
        color: darkseagreen;
    }
    #mainNav.navbar-shrink .nav-link:active {
        color: #467370;
    }
    #mainNav.navbar-shrink .nav-link.active {
        color: #64a19d;
        outline: none;
        border-bottom: 0.25rem solid #64a19d;
    }
}

.masthead {
    position: relative;
    width: 100%;
    height: auto;
    min-height: 35rem;
    padding: 15rem 0;
    background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%),
        url("./matthew.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-size: cover;
}

.masthead h1 {
    font-family: "Arial";
    font-size: 2rem;
    line-height: 2rem;
    letter-spacing: 0.8rem;
    background: -webkit-linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.65));
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
}

.masthead h2 {
    max-width: 20rem;
    font-size: 1rem;
}

@media (min-width: 768px) {
    .masthead h1 {
        font-size: 2.5rem;
        line-height: 2.5rem;
    }
}

@media (min-width: 992px) {
    .masthead {
        height: 100vh;
        padding: 0;
    }
    .masthead h1 {
        font-size: 3.5rem;
        line-height: 3.5rem;
        letter-spacing: 0.8rem;
    }
    .masthead h2 {
        max-width: 30rem;
        font-size: 1.25rem;
    }
}

.btn {
    box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
    padding: 1.25rem 2rem;
    font-family: "Varela Round";
    font-size: 80%;
    text-transform: uppercase;
    letter-spacing: 0.15rem;
    border: 0;
}

.btn-primary {
    background-color: darkseagreen;
}

.btn-primary:hover {
    background-color: darkseagreen;
}

.btn-primary:focus {
    background-color: #4f837f;
    color: white;
}

.btn-primary:active {
    background-color: #467370 !important;
}

.about-section {
    padding-top: 10rem;
    background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
}

.about-section p {
    margin-bottom: 5rem;
}

.projects-section {
    padding: 10rem 0;
}

.projects-section .featured-text {
    padding: 2rem;
}

@media (min-width: 992px) {
    .projects-section .featured-text {
        padding: 0 0 0 2rem;
        border-left: 0.5rem solid #64a19d;
    }
}

.projects-section .project-text {
    padding: 3rem;
    font-size: 90%;
}

@media (min-width: 992px) {
    .projects-section .project-text {
        padding: 5rem;
    }
    .projects-section .project-text hr {
        border-color: #64a19d;
        border-width: 0.25rem;
        width: 30%;
    }
}

body {
    font-family: "Nunito";
    letter-spacing: 0.0625em;
}

a {
    color: darkseagreen;
}

a:focus,
a:hover {
    text-decoration: none;
    color: #5f9f5f;
}

.bg-black {
    background-color: #161616 !important;
}

.bg-primary {
    background-color: #64a19d !important;
}

.text-primary {
    color: #64a19d !important;
}

.nav-link img:hover {
    opacity: 0.5;
}

#footerCopy:hover {
    cursor: default;
}

#footerLink {
    color: white;
}

#footerLink:hover {
    cursor: pointer;
    color: lightgray;
}

.showcase .showcase-text {
    padding: 3rem;
}

.showcase .showcase-img {
    min-height: 30rem;
    background-size: cover;
}

@media (min-width: 768px) {
    .showcase .showcase-text {
        padding: 7rem;
    }
}

.features-icons {
    padding-top: 7rem;
    padding-bottom: 7rem;
}

.features-icons .features-icons-item {
    max-width: 20rem;
}

.features-icons .features-icons-item .features-icons-icon {
    height: 7rem;
}

.features-icons .features-icons-item .features-icons-icon i {
    font-size: 4.5rem;
    color: darkseagreen;
}

.features-icons .features-icons-item:hover .features-icons-icon i {
    font-size: 5rem;
}

